Archive2/da/48ae04e82d984e/output
main.cpp:7:13: error: 'fun' does not name a type
 using foo = fun;
             ^
main.cpp: In function 'int main()':
main.cpp:11:15: error: 'foo' was not declared in this scope
    return foo();
               ^
